--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "dependencies": {
     "express": "^4.17.2",
     "joi": "^13.1.0",
+    "node-cron": "^3.0.0",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.12.5"
+    "sequelize": "^6.12.5",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.3.0"
